# RK3568-

./: .gitignore  CMakeLists.txt  README.md
cmake/toolchains/: rk3568-debian11.cmake
config/: mosquitto.conf  sensors.ini
docs/: RK3568与WSL部署操作手册.md
include/app/: app_initializer.h  inference_result_dispatcher.h
include/config/: ini_config.h
include/data_collection/: stream_loader.h
include/data_processing/: mpp_decoder.h  mpp_encoder.h  postprocess.h
include/monitoring/: board_status_collector.h
include/network/data_upload/: mqtt_uploader.h
include/network/protocol/: data_payload.h
include/network/stream_upload/: streaming_manager.h
include/pipeline/: bounded_queue.hpp  detection_stabilizer.h  encoded_media_service.h  frame_hub.h  inference_service.h  mosaic_stream_pipeline.h  pipeline_metrics.h  rga_preprocessor.h  v4l2_camera_pipeline.h  visible_rtsp_pipeline.h
include/storage/: event_recorder.h  sqlite_store.h
include/utils/: npu_thermal_manager.h  rknnPool.hpp  thread_runtime.h
lib/: README.md
lib/debian11-extra/usr/lib/aarch64-linux-gnu/: libmosquitto.so.2.0.11
lib/ffmpeg-debian11/include/libavutil/: ffversion.h
lib/ffmpeg-debian11/lib/: libavformat.so.58.45.100  libavutil.so.56.51.100  libswresample.so.3.7.100  libswscale.so.5.7.100
lib/irsdk/include/: IRSDK.h
model/labels/: coco_trimmed.txt  sh17_ppe_trimmed.txt
scripts/: board_hardware_status.sh  clean_board_install.sh  install_board_services.sh  start_board_services.sh
src/: main.cpp
src/app/: app_initializer.cpp  inference_result_dispatcher.cpp
src/config/: ini_config.cpp
src/data_collection/: stream_loader.cpp
src/data_processing/: mpp_decoder.cpp  mpp_encoder.cpp  postprocess.cpp
src/monitoring/: board_status_collector.cpp
src/network/data_upload/: mqtt_uploader.cpp
src/network/stream_upload/: streaming_manager.cpp
src/pipeline/: encoded_media_service.cpp  frame_hub.cpp  inference_service.cpp  mosaic_stream_pipeline.cpp  rga_preprocessor.cpp  v4l2_camera_pipeline.cpp  visible_rtsp_pipeline.cpp
src/storage/: event_recorder.cpp  sqlite_store.cpp
src/utils/: thread_runtime.cpp
systemd/: rk_video_ai.service  rkaiq_3A.service
tools/: export_rknn_models.py
windows/: start_camera_publisher.ps1
wsl/: install_wsl_services.sh  mediamtx.yml  rk_mediamtx.service  start_mediamtx.sh
